--- a/src/Aegon.Web/partials/home.html
+++ b/src/Aegon.Web/partials/home.html
@@ -37,9 +37,9 @@
         </p>
         <table class="links">
             <tr>
-                <td><a href="#">Link1</a></td>
-                <td><a href="#">Link1</a></td>
-                <td><a href="#">Link1</a></td>
+                <td><a href="javascript:;">Link1</a></td>
+                <td><a href="javascript:;">Link1</a></td>
+                <td><a href="javascript:;">Link1</a></td>
             </tr>
         </table>
     </div>
