--- a/src/Aegon.Web/partials/home.html
+++ b/src/Aegon.Web/partials/home.html
@@ -5,7 +5,7 @@
 <section id="main">
     <div class="block image-list">
         <ul>
-            <li ng-repeat="p in products"><a href="" ng-click="go('/product/' + p.id)">
+            <li ng-repeat="p in products"><a href="" ng-click="go('/user/' + p.id)">
                 <img ng-src="{{p.logo}}" alt="{{p.title}}" /></a></li>
         </ul>
     </div>
