--- a/src/Aegon.Web/partials/home.html
+++ b/src/Aegon.Web/partials/home.html
@@ -5,8 +5,10 @@
 <section id="main">
     <div class="block image-list">
         <ul>
-            <li ng-repeat="p in products"><a href="javascript:;" ng-click="go('/user/' + p.id)">
-                <img ng-src="{{p.logo}}" alt="{{p.title}}" /></a></li>
+            <li ng-repeat="p in products">
+                <a href="javascript:;" ng-click="go('/user/' + p.id)">
+                    <img ng-src="{{p.logo}}" alt="{{p.title}}" /></a>
+            </li>
         </ul>
     </div>
     <div class="block form">
