--- a/src/Aegon.Web/partials/suppliers.html
+++ b/src/Aegon.Web/partials/suppliers.html
@@ -1,6 +1,6 @@
 ﻿<header id="header" class="clearfix">
     <a class="toggle" href="javascript:;" ng-click="back()">
-        <img src="images/toggle.png" alt="Toggle"></a>
+        <img src="images/toggle.png" alt="Toggle" /></a>
     <h1>Kelly got it!</h1>
 </header>
 <section id="Section">
