--- a/src/Aegon.Web/partials/content.html
+++ b/src/Aegon.Web/partials/content.html
@@ -1,6 +1,6 @@
 ﻿<header id="header" class="clearfix">
     <a class="toggle" href="javascript:;" ng-click="back()">
-        <img src="images/toggle.png" alt="Toggle"></a>
+        <img src="images/toggle.png" alt="Toggle" /></a>
     <h1>Page Title</h1>
 </header>
 <section id="main">
