--- a/src/Aegon.Web/partials/user.html
+++ b/src/Aegon.Web/partials/user.html
@@ -1,6 +1,6 @@
 ﻿<header id="header" class="clearfix">
     <a class="toggle" href="javascript:;" ng-click="back()">
-        <img src="images/toggle.png" alt="Toggle"></a>
+        <img src="images/toggle.png" alt="Toggle" /></a>
     <h1>Your quote in 5 fields below.</h1>
     <img class="arrow" src="images/arrow.png" alt="Arrow">
 </header>
