fix css path bug

--- a/src/css/main.less
+++ b/src/css/main.less
@@ -1,4 +1,4 @@
 @import (less) "reset.css";
 @import (less) "main.css";
 @import (less) "slide.css";
-@import (less) "css/angular.css";
+@import (less) "angular.css";
